syntax = "proto3";
option go_package=".;prod";
import "models.proto";

message UserScoreRequest {
  repeated UserInfo users = 1;
}

message UserScoreRepsonse {
  repeated UserInfo users = 1;
}

service UserService {
  rpc GetUserScore(UserScoreRequest) returns (UserScoreRepsonse);
  rpc GetUserScoreByServerStream(UserScoreRequest) returns (stream UserScoreRepsonse);
  rpc GetUserScoreByClientStream(stream UserScoreRequest) returns (UserScoreRepsonse);
  rpc GetUserScoreByTWStream(stream UserScoreRequest) returns (stream UserScoreRepsonse);
}
